// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiHeaderSectionItem border defaults to left 1`] = `
<div
  class="ouiHeaderSectionItem ouiHeaderSectionItem--borderLeft"
/>
`;

exports[`OuiHeaderSectionItem border renders right 1`] = `
<div
  class="ouiHeaderSectionItem ouiHeaderSectionItem--borderRight"
/>
`;

exports[`OuiHeaderSectionItem is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiHeaderSectionItem ouiHeaderSectionItem--borderLeft testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiHeaderSectionItem renders children 1`] = `
<div
  class="ouiHeaderSectionItem ouiHeaderSectionItem--borderLeft"
>
  <span>
    Call me Ishmael.
  </span>
</div>
`;
